--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,19 @@
 @import "tailwindcss";
+
+@theme {
+	--color-color-primary: #fdb913;
+	--color-color-text: #444;
+}
+
+html,
+body {
+	@apply text-[14px] text-color-text bg-[#f1f1f1];
+	direction: rtl;
+}
+
+.base-font {
+	font-family: "Baloo Bhaijaan 2", serif;
+	font-optical-sizing: auto;
+	font-weight: 400;
+	font-style: normal;
+}
